cmake_minimum_required(VERSION 3.23)
project(FabOS C)

set(CMAKE_C_STANDARD 99)

ADD_SUBDIRECTORY(kernel)

SET(KERNEL_FILE_NAME FabOS.bin)
SET(GRUB_FILE_NAME grub.cfg)
SET(OS_IMAGE_FILE_NAME FabOS.iso)

SET(KERNEL_FILE_PATH "${PROJECT_SOURCE_DIR}/${KERNEL_FILE_NAME}")
SET(GRUB_FILE_PATH "${PROJECT_SOURCE_DIR}/${GRUB_FILE_NAME}")
SET(OS_IMAGE_FILE_PATH "${PROJECT_SOURCE_DIR}/${OS_IMAGE_FILE_NAME}")

SET(IMAGE_DIR ${PROJECT_SOURCE_DIR}/FabOSImage)
SET(IMAGE_BOOT_DIR ${IMAGE_DIR}/boot)
SET(IMAGE_GRUB_DIR ${IMAGE_BOOT_DIR}/grub)

ADD_CUSTOM_TARGET(
        FabOS ALL

        COMMAND grub-file --is-x86-multiboot ${KERNEL_FILE_PATH}
        COMMAND mkdir ${IMAGE_DIR} || true
        COMMAND mkdir ${IMAGE_BOOT_DIR} || true
        COMMAND mkdir ${IMAGE_GRUB_DIR} || true
        COMMAND cp ${KERNEL_FILE_PATH} ${IMAGE_BOOT_DIR}/${KERNEL_FILE_NAME}
        COMMAND cp ${GRUB_FILE_PATH} ${IMAGE_GRUB_DIR}/${GRUB_FILE_NAME}
        COMMAND grub-mkrescue -o ${OS_IMAGE_FILE_PATH} ${IMAGE_DIR}
        DEPENDS kernel
)
